--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,5 @@ dependencyResolutionManagement {
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
-rootProject.name = "HW_Week07_Day03"
+rootProject.name = "HW_Week7Day3"
 include ':app'
